--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
-    "watch": "rollup -c w"
+    "watch": "rollup -c -w"
   },
   "keywords": [],
   "author": "",
